# pyfixest

./: .all-contributorsrc  .coverage  .coverage.CSKs-MacBook-Air.local.14057.XYBNawLx  .coverage.CSKs-MacBook-Air.local.14071.XrbSxCvx  .coverage.CSKs-MacBook-Air.local.14107.XnFuYItx  .coverage.DESKTOP-K05JQ94.12728.XOhSzMdx  .coverage.DESKTOP-K05JQ94.13536.XaRfNdHx  .coverage.DESKTOP-K05JQ94.13548.Xtidhkpx  .coverage.DESKTOP-K05JQ94.15684.XrkOVuhx  .coverage.DESKTOP-K05JQ94.16676.XVdGMyXx  .coverage.DESKTOP-K05JQ94.17452.XdZRKQQx  .coverage.DESKTOP-K05JQ94.17740.XJceQQDx  .coverage.DESKTOP-K05JQ94.18664.XZpLuZPx  .coverage.DESKTOP-K05JQ94.19340.XlekESqx  .coverage.DESKTOP-K05JQ94.20088.XigjmoHx  .coverage.DESKTOP-K05JQ94.20396.XJITyyLx  .coverage.DESKTOP-K05JQ94.20460.XSzJBkFx  .coverage.DESKTOP-K05JQ94.20864.XfDgSLmx  .coverage.DESKTOP-K05JQ94.21596.XSSZsjSx  .coverage.DESKTOP-K05JQ94.25212.XDEGxBQx.wgw2  .coverage.DESKTOP-K05JQ94.2556.XYbSGuEx  .coverage.DESKTOP-K05JQ94.26616.XSlamjox  .coverage.DESKTOP-K05JQ94.26780.Xaeymyox  .coverage.DESKTOP-K05JQ94.26996.XISkYUux  .coverage.DESKTOP-K05JQ94.27192.XAskbztx  .coverage.DESKTOP-K05JQ94.27712.XWMPXlux.wgw3  .coverage.DESKTOP-K05JQ94.28276.XpPbuzzx  .coverage.DESKTOP-K05JQ94.2848.XmrdjBUx.wgw0  .coverage.DESKTOP-K05JQ94.28508.XRSiFGdx  .coverage.DESKTOP-K05JQ94.29984.XhChRREx  .coverage.DESKTOP-K05JQ94.30772.XMaPAsmx  .coverage.DESKTOP-K05JQ94.31120.XsRCOTTx  .coverage.DESKTOP-K05JQ94.32116.XKeXoZGx  .coverage.DESKTOP-K05JQ94.32424.XGjqUxEx  .coverage.DESKTOP-K05JQ94.4008.XefBeKVx  .coverage.DESKTOP-K05JQ94.7376.XGQHxGtx  .coverage.DESKTOP-K05JQ94.8732.XhNKTVsx  .coverage.DESKTOP-K05JQ94.9596.XdtdLYjx  .git-blame-ignore-revs  .gitattributes  (+140 more)
.agents/: feature-pr.md
.cargo/: config.toml
.claude/: README.md
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/: check_version.py  codecov.yaml  plot-tests.yml  release-config.yml
.serena/: project.yml
Examples/: effect.html  effect.rmd  regression_table.html
_site/: LICENSE.html  index.html  readme.md  search.json
agent_eval/: README.md  __init__.py  baseline-summary.yaml  cli.py  prompt-template.txt  rubric.yaml  tasks.yaml
benches/: bench.rs
benchmarks/: Benchmark_Py.py  Benchmark_R.R  Data generation.R  README.md  bench.py  bench_demean_r.R  bench_native_comparison.py  benchmark_lsmr_panel.py  benchmark_lsmr_preconditioner.py  benchmark_main.py  benchmarks.ipynb  benchmarks.py  benchmarks_readme.md  config.json  data_generation.r  data_to_csv.R  demean_benchmark.py  dgp.py  dgp_functions.py  dgps.py  generate_data.py  gpu_benchmarks.ipynb  gpu_big_benchmarks.ipynb  gpu_big_benchmarks.py  gpu_pyfixest_errors.ipynb  gpu_results.csv  modal_runner.py  plot.py  plot_results.py  quantreg_benchmarks.ipynb  readme.md  results_all.txt  results_py.csv  run_benchmarks.ipynb  run_benchmarks.py  visualise_benchmarks.ipynb
debug/: debug.Rmd
debugging/: debug-notebook.ipynb
docs/: .gitignore  CNAME  LICENSE.html  Replicating the Effect.qmd  Replicating-the-Effect.ipynb  _agent_docs.yml  _headers  _quarto.yml  _renderer.py  _sidebar.yml  acknowledgements.md  analytics.html  architecture.qmd  brave_true.ipynb  changelog.html  changelog.qmd  changelog.quarto_ipynb  compare-fixest-pyfixest.html  compare-fixest-pyfixest.ipynb  compare-fixest-pyfixest.qmd  contributing.html  contributing.qmd  difference-in-differences-estimation.ipynb  difference-in-differences-v0.16.2.html  difference-in-differences-v0.16.2.ipynb  difference-in-differences.html  difference-in-differences.ipynb  difference-in-differences.qmd  getting-started.qmd  index.ipynb  index.md  index.qmd  llms.txt  marginaleffects.html  marginaleffects.ipynb  marginaleffects.qmd  mixtape.ipynb  multiple_testing.html  multiple_testing.ipynb  news.html  (+45 more)
explanation/: blog-posts.html  blog-posts.llms.md  compare-fixest-pyfixest.html  compare-fixest-pyfixest.html.md  compare-fixest-pyfixest.llms.md  difficult-fixed-effects.html  difficult-fixed-effects.llms.md  index.html  ssc.html  ssc.html.md  ssc.llms.md
how-to/: anytime-valid-inference.html  anytime-valid-inference.html.md  anytime-valid-inference.llms.md  demeaner-backends.html  demeaner-backends.html.md  demeaner-backends.llms.md  index.html  index.html.md  index.llms.md  marginaleffects.html  marginaleffects.html.md  marginaleffects.llms.md  panel_variance_reduction.html  panel_variance_reduction.html.md  panel_variance_reduction.llms.md  pyfixest_gpu.html  pyfixest_gpu.html.md  regression_decomposition.html  regression_decomposition.html.md  regression_decomposition.llms.md  stata-2-pyfixest.html  stata-2-pyfixest.html.md  stata-2-pyfixest.llms.md  surrogate-indices-experimental-selection.html  surrogate-indices-experimental-selection.html.md  surrogate-indices-experimental-selection.llms.md
joss_paper/: paper.bib  pyfixest_joss.md
notebooks/: did2_program.R  did2s_checks.R  did2s_utils.R  did2s_weight_solution.ipynb  r_compare.r
pyfixest/: FixestMulti.py  FormulaParser.py  __init__.py  api.py  ccv.py  debug.py  demean.py  demeaners.py  detect_singletons.py  dev_utils.py  did.py  estimation.py  exceptions.py  feiv.py  feols.py  fepois.py  fixest.py  interface.py  model_matrix_fixest.py  multcomp.py  options.py  rwolf.py  ssc_utils.py  summarize.py  test.ipynb  typing.py  utils.py  visualize.py
pyfixest_core/: Cargo.toml  pyproject.toml
pyfixest_core/src/: collinear.rs  crv1.rs  demean.rs  lib.rs  nested_fixed_effects.rs
reference/: core.demean.Preconditioner.html  core.demean.Preconditioner.llms.md  core.detect_singletons.detect_singletons.html  core.detect_singletons.detect_singletons.html.md  core.detect_singletons.detect_singletons.llms.md  demean.demean.html  demean.demean.qmd  demeaners.BaseDemeaner.html  demeaners.BaseDemeaner.html.md  demeaners.BaseDemeaner.llms.md  demeaners.LsmrDemeaner.html  demeaners.LsmrDemeaner.html.md  demeaners.LsmrDemeaner.llms.md  demeaners.MapDemeaner.html  demeaners.MapDemeaner.html.md  demeaners.MapDemeaner.llms.md  demeaners.WithinDemeaner.html  demeaners.WithinDemeaner.html.md  detect_singletons.qmd  (+228 more)
(+6440 files in other folders)
