[package]
name = "pyfixest_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "_core_impl"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.24.1", features = ["extension-module"] }
ndarray = { version = "0.15", features = ["rayon"] }
rayon   = "1.9"
numpy = "0.24"
thiserror = "2.0.12"

[profile.release]
opt-level = 3        # Maximize performance
lto = "fat"          # Full link-time optimization
codegen-units = 1    # Whole-program optimization
panic = "abort"      # Smaller binary, no unwind support
strip = true         # Remove symbol table
