[package]
name = "pyfixest_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pyfixest_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.18.3", features = ["extension-module"] }
ndarray = { version = "0.15", features = ["rayon"] }
rayon   = "1.9"
numpy = "0.18"
